2010-01-24  Pawel Salek

	* configure.in, NEWS: release 2.4.5

2010-01-23  Peter Bloomfield

	* src/save-restore.c (config_identities_save): do not allocate
	unused array.

2010-01-23  Peter Bloomfield

	* src/message-window.c (destroy_message_window),
	(mw_select_part_cb): do not crash on "select-part" signal.

2010-01-23  Peter Bloomfield

	* src/balsa-message.c (balsa_message_set): clear tree before
	selecting part;
	(select_part): emit signal also for NULL part;
	(balsa_message_can_zoom): check for NULL widget.
	* src/main-window.c: rely on "select-part" signal for enabling
	menus.

2010-01-23  Peter Bloomfield

	* src/main-window.c: update menus only if they will not be
	updated when a message is shown.

2010-01-23  Pawel Salek

	* Makefile.am, src/Makefile.am: fix dist target when configured
	without gnome.
	* configure.in, NEWS: release balsa-2.4.4

2010-01-23  Pawel Salek

	* src/main-window.c: update copyright date.
	* configure.in, NEWS: release 2.4.3

2010-01-22  Peter Bloomfield

	* libbalsa/libbalsa-conf.c (lbc_sync): do not insert blank
	comments; save mtime when syncing.

2010-01-22  Peter Bloomfield

	* libbalsa/address-book-gpe.c (libbalsa_address_book_gpe_load):
	more sqlite3_free fixes.

2010-01-22  Pawel Salek

	* libbalsa/misc.c: allocate enough memory for config urls.

2010-01-19  Peter Bloomfield

	* libbalsa/imap-server.c (libbalsa_imap_server_init):
	use g_timeout_add_seconds, save the world.
	* src/balsa-mime-widget-text.c: ditto.
	* src/information-dialog.c (balsa_information_bar): ditto.
	* src/main-window.c: ditto.
	* src/main.c (main): ditto.
	* src/sendmsg-window.c (sendmsg_window_new): ditto.

2010-01-19  Peter Bloomfield

	* libbalsa/information.c (libbalsa_information_varg): show note
	before unreffing it(!).

2010-01-19  Peter Bloomfield

	* src/main-window.c (bw_quit_nicely): use
	libbalsa_information_parented, so that notification bubble can
	be closed when Balsa quits;