@@ -1,3 +1,11 @@
+2010-01-25  Peter Bloomfield
+
+	* libbalsa/filter-funcs.c (lbcond_compare_string_conditions),
+	(libbalsa_condition_compare): compare string conditions
+	correctly.
+	* libbalsa/mailbox_local.c (message_match_real): do not pass
+	NULL list to internet_address_list_to_string().
+
 2010-01-24  Pawel Salek
 
 	* configure.in, NEWS: release 2.4.5
